Added search and filtering options

--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,22 @@ img {
     line-height: normal;
 }
 
+.search-box {
+    display: inline-flex;
+    padding: 5px 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border: 1px solid #ffffff;
+    background: transparent;
+
+    color: #ffffff;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
 a.button-primary, a.button-secondary {
     display: inline-flex;
     padding: 5px 20px;
